--- a/firstone.html
+++ b/firstone.html
@@ -7,11 +7,9 @@
   <title>Login</title>
 </head>
 <body>
-
-	  <h3>Success</h3>
-	  <p>We have received your request to withdraw R900.00 ZAR and we will process it shortly.You will get a confirmation email once your request is processed.</p>
-	  <button>Ok Got It!</button>
-	</div>
-	</div>
+	<h1>You are welcome</h1>
+	<h3>Success</h3>
+	<p>We have received your request to withdraw R900.00 ZAR and we will process it shortly.You will get a confirmation email once your request is processed.</p>
+	<button>Ok Got It!</button>
 </body>
 </html>
